# sql-database

./: Cargo.toml  README.md  TODO  database.db  go.mod  go.sum  main.go  main_test.go  parser.go  persistance.go  sql_database_test.go  table.go  test.rs  todo  util.go  vm.go
src/: command_processor.rs  db_arch.rs  lib.rs  main.rs  repl.rs  tests.rs
tests/: data_persistance.rs  insert_row.rs
tests/features/: data_persistance.feature  insert_row.feature  meta_command.feature  persistant.feature  statements.feature
tests/meta_commands/: main.rs
tests/persistance/: main.rs
tests/statements/: create.rs  insert.rs  main.rs
