[package]
name = "sql_database"
version = "0.1.0"
edition = "2021"

[dependencies]
honeycomb = "0.1.4"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"

[dev-dependencies]
cucumber = "0.19.1"
futures = "0.3.28"

[[test]]
name = "statements"
harness = false

[[test]]
name = "meta_commands"
harness = false


[[test]]
name = "persistance"
harness = false
